# Flight-Fare-Prediction

./: .gitignore  Linear_Regression_(Baseline).ipynb  Linear_Regression_(Baseline)_withNormalization.ipynb  README.md  Regression_Tree.ipynb  XGBoost.ipynb  XGBoost.py  final_project.ipynb  flight_fare_prediction.ipynb  flight_fare_prediction.py  linear_regression_rick.ipynb  linear_regression_rick.py  polynomial_regression.ipynb  pyproject.toml  random_forest_v3.ipynb
.ipynb_checkpoints/: Regression_Tree-checkpoint.ipynb  final_project-checkpoint.ipynb  linear_regression_rick-checkpoint.ipynb  polynomial_regression-checkpoint.ipynb  random_forest_v1-checkpoint.ipynb  random_forest_v2-checkpoint.ipynb  random_forest_v4_X-checkpoint.ipynb
